Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignTextObjNumber.quorum
Text t = cast(Text, 7.5)
output t:GetValue()
