Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignBoolObjInteger.quorum
Boolean bool = cast(Boolean, 5)